[gd_scene load_steps=7 format=3 uid="uid://xi7bl376yeag"]

[ext_resource type="Script" path="res://script/menu/menuPrincipal.gd" id="1_dfl37"]
[ext_resource type="Texture2D" uid="uid://bg4aywj3an3c5" path="res://assets/menu principal/fondomenu.png" id="2_s1tos"]
[ext_resource type="Texture2D" path="res://assets/menu scroll/btnplayblanco.png" id="3_ybddr"]
[ext_resource type="Texture2D" uid="uid://de7u0qkt6bjq" path="res://assets/menu principal/configuracion.png" id="4_q0yhb"]
[ext_resource type="Texture2D" uid="uid://csodnfxp6g843" path="res://assets/menu principal/creditos.png" id="5_keknf"]
[ext_resource type="Texture2D" uid="uid://cmy63a01vkecp" path="res://assets/menu principal/salida.png" id="6_uqwts"]

[node name="menu principal" type="Node2D"]
script = ExtResource("1_dfl37")

[node name="fondo" type="TextureRect" parent="."]
offset_left = -52.0
offset_top = -21.0
offset_right = 632.0
offset_bottom = 875.0
texture = ExtResource("2_s1tos")
expand_mode = 5

[node name="aukantuwe" type="Label" parent="fondo"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -362.0
offset_right = 187.0
offset_bottom = -279.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "AUKANTUWE"

[node name="inicio" type="TextureRect" parent="."]
offset_left = 75.0
offset_top = 213.0
offset_right = 161.0
offset_bottom = 291.0
texture = ExtResource("3_ybddr")
expand_mode = 1

[node name="inicio" type="Button" parent="inicio"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.075
anchor_bottom = 0.136
offset_left = 2.0
offset_top = 4.0
offset_right = 428.95
offset_bottom = 73.44

[node name="Label" type="Label" parent="inicio"]
layout_mode = 0
offset_left = 153.0
offset_top = 17.0
offset_right = 321.0
offset_bottom = 70.0
theme_override_font_sizes/font_size = 38
text = "tuw端ltun"
horizontal_alignment = 1
vertical_alignment = 1

[node name="configuracion" type="TextureRect" parent="."]
offset_left = 16.0
offset_top = 250.0
offset_right = 209.0
offset_bottom = 449.0
texture = ExtResource("4_q0yhb")
expand_mode = 1

[node name="configuracion" type="Button" parent="configuracion"]
layout_mode = 0
offset_left = 52.0
offset_top = 67.0
offset_right = 450.0
offset_bottom = 134.0
flat = true

[node name="Label" type="Label" parent="configuracion"]
layout_mode = 0
offset_left = 199.0
offset_top = 70.0
offset_right = 409.0
offset_bottom = 123.0
theme_override_font_sizes/font_size = 38
text = "k端me eltun"

[node name="creditos" type="TextureRect" parent="."]
offset_left = 11.0
offset_top = 358.0
offset_right = 213.0
offset_bottom = 548.0
texture = ExtResource("5_keknf")
expand_mode = 1

[node name="creditos" type="Button" parent="creditos"]
layout_mode = 0
offset_left = 56.0
offset_top = 64.0
offset_right = 379.0
offset_bottom = 128.0
flat = true

[node name="Label" type="Label" parent="creditos"]
layout_mode = 0
offset_left = 203.0
offset_top = 67.0
offset_right = 283.0
offset_bottom = 120.0
theme_override_font_sizes/font_size = 38
text = "elfal"

[node name="salida" type="TextureRect" parent="."]
offset_left = 13.0
offset_top = 455.0
offset_right = 219.0
offset_bottom = 648.0
texture = ExtResource("6_uqwts")
expand_mode = 1

[node name="salida" type="Button" parent="salida"]
layout_mode = 0
offset_left = 57.0
offset_top = 64.0
offset_right = 455.0
offset_bottom = 128.0
flat = true

[node name="Label" type="Label" parent="salida"]
layout_mode = 0
offset_left = 201.0
offset_top = 70.0
offset_right = 419.0
offset_bottom = 123.0
theme_override_font_sizes/font_size = 38
text = "m端単atripan"

[connection signal="pressed" from="inicio/inicio" to="." method="_on_inicio_pressed"]
[connection signal="pressed" from="configuracion/configuracion" to="." method="_on_configuracion_pressed"]
[connection signal="pressed" from="creditos/creditos" to="." method="_on_creditos_pressed"]
[connection signal="pressed" from="salida/salida" to="." method="_on_salida_pressed"]
